--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,15 @@
   "description": "To monitor time spend on work",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "paper-input": "PolymerElements/paper-input#^1.1.23",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
     "app-layout": "PolymerElements/app-layout#^0.10.6",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "bender-clock": "itsMeBender/bender-clock#^1.0.3",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
-    "bender-clock": "itsMeBender/bender-clock#^1.0.3"
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "paper-input": "PolymerElements/paper-input#^1.1.23",
+    "polymer": "Polymer/polymer#^1.4.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
