--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "bender-clock": "itsMeBender/bender-clock#^1.0.3",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "kgui-single-digit": "Q:/50_Web_Components/catalog/webc-single-digit/kgui-single-digit/",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "paper-input": "PolymerElements/paper-input#^1.1.23",
