--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "worktimer",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "devDependencies": {
     "del": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-html": "^1.7.0",
     "gulp": "^3.9.1",
+    "gulp-bump": "^2.7.0",
+    "gulp-filter": "^5.0.0",
+    "gulp-tag-version": "^1.3.0",
     "vinyl-ftp": "^0.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/itsMeBender/AtWork.git"
   },
   "scripts": {
     "lint": "eslint . --ext js,html; exit 0;",
     "test": "npm run lint && polymer test",
-    "deploy": "bower update && polymer build && gulp deploy"
+    "deploy": "gulp patch && bower update && polymer build && gulp deploy"
   }
 }
