--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "worktimer",
   "license": "MIT",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "devDependencies": {
     "del": "^3.0.0",
     "eslint": "^3.19.0",
@@ -20,6 +20,6 @@
   "scripts": {
     "lint": "eslint . --ext js,html; exit 0;",
     "test": "npm run lint && polymer test",
-    "deploy": "gulp patch && bower update && polymer build && gulp deploy"
+    "deploy": "gulp patch && bower update && polymer build --add-service-worker && gulp deploy"
   }
 }
